# game-engine

./: .gitmodules  :w  CMakeLists.txt
assets/: TIE.dae  cube.dae  cube.gltf  new.data6.dae
cgeom/: CMakeLists.txt  geometry_test[1]_include.cmake
cgeom/include/cgeom/: barycentric.h  intersect.h  transform.h
cgeom/test/: geometry_test.cpp
collections/: CMakeLists.txt  stable_vector[1]_include.cmake
collections/include/collections/: actor.h  debug_print.h  observable.h  pipe.h  ring_buffer.h  sbo_vtable.h  scene_graph.h  simple_que.h  stable_vector.h  sync_que.h  sync_que_utils.h  timer.h
collections/perf/: sync_que.cpp
collections/src/: debug_print.cpp
collections/test/: test.cpp
lua/: CMakeLists.txt
lua/include/: lua_context_impl.h
lua/include/public/lua/: lua_context.h  lua_function.h  lua_items.h  lua_table.h
lua/src/: lua_context.cpp
lua/test/: repl.cpp
render/: CMakeLists.txt
render/include/render/: import.h  render.h  ui.h
render/src/: context.cpp  input_handler_impl.cpp  render.cpp  render_impl.h  window.h  window_impl.h
render/src/asset_import/: asset.cpp  asset.h  import.cpp  mesh.h  texture.cpp  texture.h
render/src/gl_impl/: gl_impl.h
render/src/gl_utils/: gl_error.h  shader.h  texture.h  vbo.h
render/src/ncurses_impl/: asset.cpp  ncurses_impl.cpp  ncurses_impl.h  ray_tracer.h
render/src/shaders/: flat_color.frag  flat_color.h  flat_color.vert
render/src/software_impl/: debug_ui_handler.cpp  debug_ui_handler.h  software_impl.cpp  software_impl.h
render/src/ui_utils/: console.h  repl_console.h
render/test/: import_test.cpp  render_test.cpp  test.cpp
tools/shader_gen/: gles20_gen.py  shader_gen.py  shader_template.txt
